--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
   <meta name="theme-color" content="#DCFFD8">
 </head>
 </div>
-  <div class="noticeBanner"><strong class="important">NEW!</strong><p>Introducing</p><strong>VERBUS</strong><a href="https://verbus.cph101.com">Open Website &#8594;</a></div>
-  <div class="intro">
-    <img class="profilePic" src="images/profilePic.jpeg"></img>
-    <br></br>
-    <h1 style="font-size:200%;">This is me, cph101</h1>
-    <br></br>
-    <h3 style="padding:20px;">I am a font-end web developer who enjoys coding games, embeds and iOS Shortcuts.</h3>
-    <br>
-    <button id="testButton" onclick="window.location.href = 'https://github.com/cph101'" style="width:150px;height:30px;display:inline;">My GitHub</button>
-    <button onclick="window.location.href = 'mailto:cph101@icloud.com'" style="width:150px;height:30px;display:inline;">My Email</button>
-  </div>
+  <div class="noticeBanner"><strong class="important">ALERT!</strong><p>This website is impossable to</p><strong>INSPECT</strong></div>
 </html>
 
 <script src="js/preventChange.js"></script>
