--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="theme-color" content="#DCFFD8">
 </head>
 </div>
-  <div class="noticeBanner"><strong class="important">ALERT!</strong><p>This website is impossable to</p><strong>INSPECT</strong></div>
+  <div class="alert "><p style="text-align: center;"><span style="font-size: 18pt;">
+    <strong>Your Content inside this Alert Banner!</strong></span></p>
+  </div>
 </html>
 
 <script src="js/preventChange.js"></script>
