--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <script src="js/main.js"></script>
   <meta name="theme-color" content="#DCFFD8">
   <style>
+    /* The alert message box */
     .alert {
       padding: 20px;
-      background-color: #f44336;
+      background-color: #f44336; /* Red */
       color: white;
+      margin-bottom: 15px;
     }
 
+    /* The close button */
     .closebtn {
       margin-left: 15px;
       color: white;
@@ -25,6 +28,7 @@
       transition: 0.3s;
     }
 
+    /* When moving the mouse over the close button */
     .closebtn:hover {
       color: black;
     }
