--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-    <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+    <strong>Warning!</strong> This website is impossable to steal the HTML code from.
   </div>
 </html>
 
