--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
   </style>
 </head>
-</div>
+</div id="element-to-hide">
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
     <strong>Warning!</strong> This website is impossable to steal the HTML code from.
