--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
   </div>
 </html>
 
-
+<script src="js/preventInspect.js"></script>
+<script src="js/preventCopy.js"></script>
 <script src="js/preventChange.js"></script>
