--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     }
   </style>
 </head>
-</div id="element-to-hide">
-  <div class="alert">
+</div>
+  <div class="alert" id="element-to-hide">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
     <strong>Warning!</strong> This website is impossable to steal the HTML code from.
   </div>
