--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
   </style>
 </head>
 </div>
-  <div class="alert" id="element-to-hide">
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-    <strong>Warning!</strong> This website is impossable to steal the HTML code from.
+  <div id="element-to-hide">
+    <div class="alert" id="element-to-hide">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <strong>Warning!</strong> This website is impossable to steal the HTML code from.
+    </div>
   </div>
 </html>
 
