--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="mainApp">
 <head>
-  <title>Impossable Inspect</title>
+  <title>Impossible Inspect</title>
   <link href="/css/appearances.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +38,7 @@
   <div id="element-to-hide">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-      <strong>Warning!</strong> This website is impossable to steal the HTML code from.
+      <strong>Warning!</strong> This website is impossible to steal the HTML code from.
     </div>
   </div>
 </html>
