--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="element-to-hide">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-      <strong>Warning!</strong> This website is impossible to steal the HTML code from.
+      <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
     </div>
   </div>
 </html>
