--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
       <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
     </div>
+    <iframe src="https://google.com" width="100%" height="300" style="border:none;">
   </div>
 </html>
 
