--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
       <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
     </div>
-    <iframe src="https://google.com" width="100%" height="300" style="border:none;">
+    <iframe is="x-frame-bypass" src="https://google.com" width="100%" height="300" style="border:none;">
   </div>
 </html>
 
 <script src="js/preventCopy.js"></script>
 <script src="js/preventInspect.js"></script>
+<script src="https://unpkg.com/@ungap/custom-elements-builtin"></script>
+<script type="module" src="https://unpkg.com/x-frame-bypass"></script>
