--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     }
   </style>
 </head>
+<body>
   <div id="element-to-hide">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
@@ -45,4 +46,5 @@
   <script src="js/preventInspect.js"></script>
   <script src="https://unpkg.com/@ungap/custom-elements-builtin"></script>
   <script type="module" src="https://unpkg.com/x-frame-bypass"></script>
+</body>
 </html>
