--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <div id="element-to-hide">
+  <div id="page-content">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
       <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
