--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html id="mainApp">
 <head>
   <title>Impossible Inspect</title>
-  <link href="/css/appearances.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/appearances.css" rel="stylesheet" class="hide">
+  <link href="/css/style.css" rel="stylesheet" class="hide">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js/main.js"></script>
+  <script src="js/main.js" class="hide"></script>
   <meta name="theme-color" content="#DCFFD8">
-  <style>
+  <style class="hide">
     /* The alert message box */
     .alert {
       padding: 20px;
@@ -34,7 +34,7 @@
     }
   </style>
 </head>
-<body>
+<body class="hide">
   <div id="page-content">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
