--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html id="mainApp">
 <head>
   <title>Impossible Inspect</title>
-  <link href="/css/appearances.css" rel="stylesheet" class="hide">
-  <link href="/css/style.css" rel="stylesheet" class="hide">
+  <link href="/css/appearances.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js/main.js" class="hide"></script>
+  <script src="js/main.js"></script>
   <meta name="theme-color" content="#DCFFD8">
-  <style class="hide">
+  <style>
     /* The alert message box */
     .alert {
       padding: 20px;
@@ -15,7 +15,6 @@
       color: white;
       margin-bottom: 15px;
     }
-
     /* The close button */
     .closebtn {
       margin-left: 15px;
@@ -27,19 +26,18 @@
       cursor: pointer;
       transition: 0.3s;
     }
-
     /* When moving the mouse over the close button */
     .closebtn:hover {
       color: black;
     }
   </style>
 </head>
-<body class="hide">
+<body>
   <div id="page-content">
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-      <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
-    </div>
+       <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
+     </div>
     <script src="js/preventCopy.js"></script>
     <script src="js/preventInspect.js"></script>
   </div>
