--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
        <strong>Warning!</strong> This website is impossible to steal & edit the HTML code from.
      </div>
     <script src="js/preventCopy.js"></script>
+    <script src="js/preventSource.js"></script>
     <script src="js/preventInspect.js"></script>
   </div>
 </body>
